// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewSettings (snapshots) should match snapshot (confirm) 1`] = `
<div
  className="c-view-menu__display-box u-flex-1"
>
  <div
    className="c-view-menu__display-box"
  >
    <p
      className="c-view-menu__confirm-text"
    >
      Are you sure?
    </p>
    <button
      className="c-view-menu__control-btn qa-delete-poll"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      className="c-view-menu__control-btn qa-confirm-false"
      onClick={[Function]}
    >
      No
    </button>
  </div>
  <button
    className="c-view-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Public
  </button>
</div>
`;

exports[`ViewSettings (snapshots) should match snapshot (default) 1`] = `
<div
  className="c-view-menu__display-box u-flex-1"
>
  <button
    className="c-view-menu__control-btn qa-confirm-true"
    onClick={[Function]}
  >
    Delete
  </button>
  <button
    className="c-view-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Public
  </button>
</div>
`;

exports[`ViewSettings (snapshots) should match snapshot (flagged) 1`] = `
<div
  className="c-view-menu__display-box u-flex-1"
>
  <button
    className="c-view-menu__control-btn qa-confirm-true"
    onClick={[Function]}
  >
    Delete
  </button>
  <button
    className="c-view-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Private
  </button>
</div>
`;

exports[`ViewSettings (snapshots) should match snapshot (secret) 1`] = `
<div
  className="c-view-menu__display-box u-flex-1"
>
  <button
    className="c-view-menu__control-btn qa-confirm-true"
    onClick={[Function]}
  >
    Delete
  </button>
  <button
    className="c-view-menu__button qa-toggle-secret u-flex-right"
    onClick={[Function]}
  >
    Private
  </button>
</div>
`;
